1.1 2006-10-11
========
cacher:
 * gc expired items, new ini
   * xcache.ttl
   * xcache.gc_interval
   * xcache.var_ttl
   * xcache.var_maxttl
   * xcache.var_gc_interval 
 * Partial php 5.2 support
 * "Cannot redeclare ()" bug
 * [95] FIX #20, default: --enable-xcache-constant=yes
 * [89] FIX #19 prototype inherit from abstract class
 * [88] FIX possible fix for #14 "Cannot redeclare ()"
 * [86] FIX #14, #17, #18

Translations:
 * [128] Chinese translation for xcache.ini
 * [124] Chinese translation for coverager
 * [135] Chinese Traditional translation for admin page. thanks to Finjon Kiang.
 * [123] Chinese translation for admin page

Admin:
 * FIX cache corruption on clear button click
 * FIX refcount
 * use phpinfo style

Coverager:
 * use phpinfo style
 * percent bar updated

Others:
 * fix build on rare arch
 * fix build on Mac OS X
 * kill compiler warnings
 * zts build
 * all fixes from <=1.0.2

ChangeLog
========
 * merged from trunk: 159,161-162,167-180,182,184,186-187,194
   * [194] PHP_5_2: new element in zend_brk_cont_element
   * [186] [187] fix build on some rare arch
   * [184] fix tplcov
   * [178] fix type processor_t conflict with Mac OS X
 * remove redundant open_basedir check, it's done before compiling
 * trick in_compilation state, don't trigger __autoload at compile time
 * FIX conflict between sandbox and user error handler 
 * [154] fix segv on MSHUTDOWN
 * [153] win32/vc build fix
 * [150] avoid crash when OOM on mem_realloc
 * [148] reconstruct shm/allocator
 * [147] show module info in statistics page
 * [146] avoid reading of uninitialized data. thanks to valgrind
 * [144] compat size displaying in admin page func
 * [143] fixed string parameter parsing arg type for disassembler functions. thanks to check_paramaters.php
 * [141] fix cache clear corruption bug
 * [140] fix refcount on cache #1 #2 …
 * [133] admin-page: be more friendly if XCache isn't loaded
 * [132] fix zts on calling destroy_op_array